--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "redux-thunk": "^2.3.0",
     "string.prototype.replaceall": "^1.0.5",
     "styled-components": "^5.3.0",
+    "uid2": "^1.0.0",
     "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
