--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@mui/icons-material": "^5.0.1",
     "@reduxjs/toolkit": "^1.6.1",
     "@types/react-redux": "^7.1.18",
     "axios": "^0.21.1",
@@ -39,7 +42,8 @@
     "string.prototype.replaceall": "^1.0.5",
     "styled-components": "^5.3.0",
     "uid2": "^1.0.0",
-    "use-dark-mode": "^2.3.1"
+    "use-dark-mode": "^2.3.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/emoji-mart": "^3.0.5",
